# serializer version: 1
# name: test_deploy_multiple_services
  '''
  +-----------------------------------------------------+
  | key    | value                                      |
  |--------+--------------------------------------------|
  | status | Service TEST_SERVICE successfully created. |
  +-----------------------------------------------------+
  
  '''
# ---
# name: test_deploy_multiple_services_without_entity_id
  '''
  Usage: root spcs service deploy [OPTIONS] [ENTITY_ID]
  Try 'root spcs service deploy --help' for help.
  +- Error ----------------------------------------------------------------------+
  | Multiple services found. Please provide entity id for the operation.         |
  +------------------------------------------------------------------------------+
  
  '''
# ---
# name: test_deploy_not_existing_entity_id
  '''
  Usage: root spcs service deploy [OPTIONS] [ENTITY_ID]
  Try 'root spcs service deploy --help' for help.
  +- Error ----------------------------------------------------------------------+
  | No 'not_existing_entity_id' entity in project definition file.               |
  +------------------------------------------------------------------------------+
  
  '''
# ---
# name: test_deploy_only_required_fields
  '''
  +-----------------------------------------------------+
  | key    | value                                      |
  |--------+--------------------------------------------|
  | status | Service TEST_SERVICE successfully created. |
  +-----------------------------------------------------+
  
  '''
# ---
# name: test_deploy_service
  '''
  +-----------------------------------------------------+
  | key    | value                                      |
  |--------+--------------------------------------------|
  | status | Service TEST_SERVICE successfully created. |
  +-----------------------------------------------------+
  
  '''
# ---
# name: test_deploy_service_already_exists
  '''
  +- Error ----------------------------------------------------------------------+
  | Service TEST_SERVICE already exists.                                         |
  +------------------------------------------------------------------------------+
  
  '''
# ---
# name: test_deploy_service_with_upgrade
  '''
  +--------------------------------------------+
  | key    | value                             |
  |--------+-----------------------------------|
  | status | Statement completed successfully. |
  +--------------------------------------------+
  
  '''
# ---
# name: test_events_output_all_levels
  '''
  +--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
  | TIMESTAMP                  | DATABASE NAME   | SCHEMA NAME     | SERVICE NAME | INSTANCE ID | CONTAINER NAME | SEVERITY | EVENT NAME                     | EVENT VALUE                                                   |
  |----------------------------+-----------------+-----------------+--------------+-------------+----------------+----------+--------------------------------+---------------------------------------------------------------|
  | 2026-07-07 20:46:54.913605 | SVC_USER_EVENTS | SVC_USER_EVENTS | SVC001       | N/A         | N/A            | INFO     | SERVICE.STATUS_CHANGE          | {"message": "Service is ready", "status": "RUNNING"}          |
  | 2026-07-07 20:46:55.130550 | SVC_USER_EVENTS | SVC_USER_EVENTS | SVC001       | 0           | N/A            | INFO     | SERVICE_INSTANCE.STATUS_CHANGE | {"message": "Service instance is running", "status": "READY"} |
  | 2026-06-23 23:10:11.150000 |                 | SVC_USER_EVENTS | SVC001       | 0           | main           | INFO     | CONTAINER.STATUS_CHANGE        | {"message": "Waiting to start", "status": "PENDING"}          |
  +--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
  
  '''
# ---
# name: test_latest_metrics
  '''
  +------------------------------------------------------------------------------------------------------------------------------------------------------+
  | TIMESTAMP                  | DATABASE NAME | SCHEMA NAME | SERVICE NAME | INSTANCE ID | CONTAINER NAME | METRIC NAME         | METRIC VALUE          |
  |----------------------------+---------------+-------------+--------------+-------------+----------------+---------------------+-----------------------|
  | 2024-12-10 18:53:21.809000 | N/A           | N/A         | LOG_EVENT    | N/A         | log-printer    | container.cpu.usage | 0.0005007168666666691 |
  +------------------------------------------------------------------------------------------------------------------------------------------------------+
  
  '''
# ---
# name: test_metrics_all_filters
  '''
                      select *
                      from event_table_db.data_schema.snowservices_logs
                      where (
                          upper(resource_attributes:"snow.service.name") = upper('LOG_EVENT') and (resource_attributes:"snow.service.instance" = '0' OR resource_attributes:"snow.service.container.instance" = '0') and resource_attributes:"snow.service.container.name" = 'log-printer'
                          
                          and timestamp >= sysdate() - interval '2 hour'
                          and timestamp <= sysdate() - interval '1 hour'
                      )
                      and record_type = 'METRIC'
                      and scope['name'] = 'snow.spcs.platform'
                      order by timestamp desc
                  
  '''
# ---
